--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=backend
+
+# Configura\u00e7\u00e3o do MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/masterspi_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=MastersPI25@
+
+# JPA (Hibernate) Configura\u00e7\u00f5es
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Porta do Servidor
+server.port=8080
+
+#spring.security.user.name=admin
+#spring.security.user.password=admin123
