--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
 
 # Configura\u00e7\u00e3o do MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/masterspi_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/masterspi_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=MastersPI25@
 
@@ -12,6 +12,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Porta do Servidor
 server.port=8080
+
+# Rotas Padr\u00f5es
+server.servlet.context-path=/
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.html
 
 #spring.security.user.name=admin
 #spring.security.user.password=admin123
