--- a/backend/backend/src/main/resources/application.properties
+++ b/backend/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=backend
 # Configura\u00e7\u00e3o do MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/masterspi_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=MastersPI25@
+spring.datasource.password=godoy1003
 
 # JPA (Hibernate) Configura\u00e7\u00f5es
 spring.jpa.hibernate.ddl-auto=update
