--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=backend
 # Configura\u00e7\u00e3o do MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/masterspi_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=godoy1003
+spring.datasource.password=MastersPI25@
 
 # JPA (Hibernate) Configura\u00e7\u00f5es
 spring.jpa.hibernate.ddl-auto=update
@@ -17,6 +17,3 @@ server.port=8080
 server.servlet.context-path=/
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.html
-
-#spring.security.user.name=admin
-#spring.security.user.password=admin123
