--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,19 +1,39 @@
 spring.application.name=backend
 
-# Configura\u00e7\u00e3o do MySQL
+##############################################
+# Configura\u00e7\u00f5es para MySQL (comente para usar H2)
+##############################################
 spring.datasource.url=jdbc:mysql://localhost:3306/masterspi_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=MastersPI25@
-
-# JPA (Hibernate) Configura\u00e7\u00f5es
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# Porta do Servidor
+##############################################
+# Configura\u00e7\u00f5es para H2 (descomente para usar H2)
+##############################################
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+##############################################
+# Configura\u00e7\u00f5es JPA (Hibernate) comuns
+##############################################
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# executar o data.sql somente ap\u00f3s a cria\u00e7\u00e3o das tabelas pelo Hibernate
+spring.jpa.defer-datasource-initialization=true
+
+##############################################
+# Configura\u00e7\u00f5es do Servidor
+##############################################
 server.port=8080
 
-# Rotas Padr\u00f5es
+##############################################
+# Configura\u00e7\u00f5es das Views
+##############################################
 server.servlet.context-path=/
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.html
