--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,3 +37,6 @@ server.port=8080
 server.servlet.context-path=/
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.html
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
