--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=backend
 ##############################################
 spring.datasource.url=jdbc:mysql://localhost:3306/masterspi_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=MastersPI25@
+spring.datasource.password=godoy1003
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 ##############################################
