--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,42 +1,26 @@
-spring.application.name=backend
+# ==============================
+# CONFIGURA\u00c7\u00d5ES PARA H2 (ATIVADO)
+# ==============================
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-##############################################
-# Configura\u00e7\u00f5es para MySQL (comente para usar H2)
-##############################################
-spring.datasource.url=jdbc:mysql://localhost:3306/masterspi_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=godoy1003
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-##############################################
-# Configura\u00e7\u00f5es para H2 (descomente para usar H2)
-##############################################
-#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-##############################################
-# Configura\u00e7\u00f5es JPA (Hibernate) comuns
-##############################################
-spring.jpa.hibernate.ddl-auto=update
+# Garante que o banco seja recriado a cada inicializa\u00e7\u00e3o
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-
-# executar o data.sql somente ap\u00f3s a cria\u00e7\u00e3o das tabelas pelo Hibernate
 spring.jpa.defer-datasource-initialization=true
 
-##############################################
-# Configura\u00e7\u00f5es do Servidor
-##############################################
-server.port=8080
+# Habilitar o console do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-##############################################
-# Configura\u00e7\u00f5es das Views
-##############################################
-server.servlet.context-path=/
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.html
-
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+# ==============================
+# CONFIGURA\u00c7\u00d5ES PARA MYSQL (DESATIVADO)
+# ==============================
+# spring.datasource.url=jdbc:mysql://localhost:3306/masterspi_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# spring.datasource.username=root
+# spring.datasource.password=MastersPI25@
+# spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# spring.jpa.hibernate.ddl-auto=update
