--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # ==============================
-# CONFIGURA\u00c7\u00d5ES PARA H2 (ATIVADO)
+# CONFIGURA\u00c7\u00d5ES PARA H2
 # ==============================
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Garante que o banco seja recriado a cada inicializa\u00e7\u00e3o
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -17,10 +17,10 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # ==============================
-# CONFIGURA\u00c7\u00d5ES PARA MYSQL (DESATIVADO)
+# CONFIGURA\u00c7\u00d5ES PARA MYSQL
 # ==============================
-# spring.datasource.url=jdbc:mysql://localhost:3306/masterspi_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-# spring.datasource.username=root
-# spring.datasource.password=MastersPI25@
-# spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-# spring.jpa.hibernate.ddl-auto=update
+ spring.datasource.url=jdbc:mysql://localhost:3306/masterspi_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+ spring.datasource.username=root
+ spring.datasource.password=MastersPI25@
+ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+ spring.jpa.hibernate.ddl-auto=update
